-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.2, 6.8.0 Beta2
-
ac309fdee (dev), 1e4658cc0 (dev), 406bcf868 (6.8), 0fbb5c9f8 (6.7), b0fd8ef05 (dev), 9b3a8acef (6.8), 640d9e029 (6.7)
The attached project (no pun intended) produces the warning,
Using attached type Test already initialized in a parent scope.: Reference it by id instead:
Strangeness:
- Where the "repeated" attachment is made N levels deep, the warning is emitted N times for that line.
- This warning is not emitted at all if "import QtQuick.Controls.Basic" is removed.
- This warning is not emitted if our custom attached type is replaced by a "built-in" attached type (like Window.width or Keys.enabled)
- is duplicated by
-
QTBUG-129115 AttachedProperyReuse warning suggests endless id loop
-
- Closed
-
- resulted in
-
QTBUG-127691 qmllint: don't print duplicate warnings
-
- Closed
-
- split to
-
QTBUG-127812 qmllint: enhance QQuickAttachedPropertyPropagator-reuse warning
-
- Reported
-