qmllint: Remove duplicate warning in quicklintplugin

Add a return where missing to avoid complaining multiple times about the
same issue.

Task-number: QTBUG-127650
Task-number: QTBUG-127691
Change-Id: I14e8d12f1e5b4dfd9a7453a2f8206502f5858a85
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 1e4658cc080658e1f18cc56e936c7cb13dc12d35)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 406bcf86827c777bfe5cce904b1758961405c18e)