tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -1907,6 +1907,10 @@ void TestQmllint::attachedPropertyReuse()
         },
         Result::AutoFixable
     });
+    runTest("pluginQuick_multipleAttachedPropertyReuse.qml",
+            Result{ { Message{ QStringLiteral(
+                    "Using attached type Test already initialized in a parent scope") } } },
+            {}, {}, {}, UseDefaultImports, &categories);
 }
 
 void TestQmllint::missingBuiltinsNoCrash()
